# NetworksLab2019HSE

./: .gitignore  CMakeLists.txt  CurrencyApplicationProtocol  PrimeNumbersApplicationProtocol  README.md  Readme.md  TBBGet.cmake  build.gradle  settings.gradle  task.md  tmpfile
EmailClientServer/common/: CMakeLists.txt
EmailClientServer/common/test/: main.cpp
EmailClientServer/server/: CMakeLists.txt
EmailClientServer/server/include/: EmailWithId.h  EmailWithInfo.h  Server.h
EmailClientServer/server/src/: EmailWithId.cpp  EmailWithInfo.cpp  Server.cpp  main.cpp
VacancyClientServer/server/: CMakeLists.txt
VacancyClientServer/server/include/: Server.h
VacancyClientServer/server/src/: Server.cpp  main.cpp
chat_client/: CMakeLists.txt
chat_client/private/: Communicator.cpp  ConsoleChatController.cpp  main.cpp
chat_client/private/socket/: LinuxSocket.cpp  WindowsSocket.cpp
chat_client/public/: Communicator.h  ConsoleChatController.h  Messages.h
chat_client/public/socket/: LinuxSocket.h  MySocket.h  WindowsSocket.h
common/: CMakeLists.txt  build.gradle  models.h
common/include/: Message.h  constants.h  ctpl.h
common/include/lib/: ctpl.h
common/include/model/: model.h  request.h
common/include/serialization/: primitive.h  response.h
common/model/: model.cpp  model.h  request.cpp  request.h  response.cpp  response.h
common/serialization/: primitive.cpp  primitive.h  request.cpp  request.h  response.cpp  response.h  size_collector.cpp
common/src/: Message.cpp
common/src/model/: model.cpp  request.cpp  response.cpp
common/src/serialization/: primitive.cpp  request.cpp  response.cpp  size_collector.cpp
currency/server/: CMakeLists.txt
currency/server/include/: Currency.h  Server.h
currency/server/src/: Currency.cpp  CurrencyServerApplication.cpp  Server.cpp
email_client/: CMakeLists.txt  Readme.md
email_client/include/: client.h  email.h  pch.h
email_client/include/network/: client_socket.h  message.h  request.h  response.h  socket.h
email_client/include/serialization/: request.h  response.h  serialization.h
email_client/include/util/: commands.h  get_size.h  user_view.h
email_client/src/: client.cpp  email.cpp  main.cpp
email_client/src/email_system/: client.cpp  email.cpp
email_client/src/network/: client_socket.cpp  request.cpp  response.cpp
email_client/src/serialisation/: request.cpp  response.cpp  serialization.cpp
email_client/src/util/: commands.cpp  get_size.cpp  user_view.cpp
rating_server/: CMakeLists.txt  README.md
rating_server/private/: Client.cpp  Communicator.cpp  ConsoleChatController.cpp  Rating.cpp  Server.cpp  Socket.cpp  Worker.cpp  main.cpp
rating_server/private/ClientMessages/: AddChoice.cpp  CloseRating.cpp  Connect.cpp  DeleteRating.cpp  NewRating.cpp  OpenRating.cpp  RatingList.cpp  ShowRating.cpp  VoteRating.cpp
rating_server/private/socket/: LinuxSocket.cpp  WindowsSocket.cpp
rating_server/public/: Client.h  Communicator.h  ConsoleChatController.h  Messages.h  Rating.cpp  Rating.h  Server.h  ServerMessage.h  Socket.h  Worker.h
rating_server/public/ClientMessages/: AddChoice.h  BaseMessage.h  ClientMessage.h  CloseRating.h  Connect.h  DeleteRating.h  NewRating.h  OpenRating.h  RatingList.h  ShowRating.h  VoteRating.h
rating_server/public/socket/: LinuxSocket.h  WindowsSocket.h
server/: CMakeLists.txt  build.gradle  settings.gradle
server/include/: ChatServer.h  EmailWithInfo.h  Server.h  Tasks.h  utils.h
server/src/: ChatServer.cpp  EmailWithInfo.cpp  EmailWithInfo.h  Server.cpp  Server.h  Tasks.cpp  main.cpp
tcp/client/: CMakeLists.txt  Client.cpp  Client.h  IncomingEvent.h  README.md  client.cpp  client.h  main.c  main.cpp  protocol.cpp  protocol.h  run.sh
tcp/client/include/: CalcuatorServerDriver.hpp  CalculatorApp.cpp  CalculatorApp.hpp  Client.h  ConcurrentQueue.hpp  ReadWriteHelper.h  Response.h  SocketReader.h  client.h  client_logic.h  connection_opening_exception.h  disconnected_server_exception.h  io_util.h  login.h  main_cycle.h  network_exception.h  no_such_host_exception.h  nonexistend_product_exception.h  query_type.h  requests.hpp  socketUtils.hpp  socket_io.h  socket_opening_exception.h  socket_reading_exception.h  util.h
tcp/client/src/: CalcuatorServerDriver.cpp  Client.cpp  Main.cpp  ReadWriteHelper.cpp  ReadWriteHelper.h  Response.cpp  SocketReader.cpp  client.cpp  client.h  client_logic.cpp  io_util.cpp  login.cpp  main.cpp  main_cycle.cpp  message.cpp  message.h  socketUtils.cpp  socket_io.cpp  util.cpp
tcp/server/: CMakeLists.txt  README.md  Server.cpp  Server.h  Task.cpp  Task.h  client.cpp  client.h  main.c  main.cpp  protocol.md  run.sh  server.cpp  server.h
tcp/server/include/: Acceptor.h  Bug.h  BugTrackingServer.h  Client.h  ClientHandler.h  Data.h  PaymentSystemServer.h  Server.h  SocketReader.h  User.h  UserService.h  Worker.h  binding_exception.h  logger.hpp  market_server.h  message.hpp  news.h  pools.h  product.h  query_type.h  request.hpp  response.hpp  roulette_server.h  server.h  server.hpp  socket_io.h  socket_opening_exception.h  socket_writing_exception.h  tcp_server.h  util.hpp
tcp/server/src/: Acceptor.cpp  BugTrackingServer.cpp  Client.cpp  ClientHandler.cpp  ClientHandler.h  Data.cpp  PaymentSystemServer.cpp  ReadWriteHelper.cpp  ReadWriteHelper.h  Server.cpp  SocketReader.cpp  UserService.cpp  Worker.cpp  client_abstraction.cpp  client_abstraction.h  main.cpp  market_server.cpp  pools.cpp  roulette_server.cpp  roulette_server.h  server.cpp  server.h  server.hpp  socket_io.cpp  tcp_server.cpp  wallet.cpp  wallet.hpp
udp/server/: CMakeLists.txt
udp/server/include/: Server.h  pools.h  request.hpp  response.hpp  server.h  util.hpp
udp/server/src/: CurrencyServerApplication.cpp  Server.cpp  pools.cpp  server.cpp
vacancy_server/: CMakeLists.txt  Readme.md
vacancy_server/cmake/: TBBGet.cmake
vacancy_server/include/: pch.h  server.h  speciality.h  vacancy.h
vacancy_server/include/network/: client_socket.h  server_socket.h  socket_exception.h
vacancy_server/src/: main.cpp  server.cpp  speciality.cpp  vacancy.cpp
(+362 files in other folders)
